Corrected tab text ellipsis on small devices

--- a/kura/org.eclipse.kura.web2/src/main/resources/org/eclipse/kura/web/css/denali.css
+++ b/kura/org.eclipse.kura.web2/src/main/resources/org/eclipse/kura/web/css/denali.css
@@ -616,7 +616,6 @@ Navbar START
 	border-bottom: solid 1px;
 	overflow-x: auto !important;
 	overflow-y: hidden !important;
-	text-overflow: ellipsis !important;
 	white-space: nowrap !important;
 }
 
